--- a/index.html
+++ b/index.html
@@ -74,13 +74,35 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="./index.html">test</a>
+                  <a href="./index.html">Kecamatan Wonotunggal</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">test</a>
+                  <a href="./index.html">Kecamatan Bandar</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">test</a>
+                  <a href="./index.html">Kecamatan Blado</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">test</a>
+                  <a href="./index.html">Kecamatan Reban</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Bawang</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Tersono</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Gringsing</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Limpung</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Subah</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Tulis</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Batang</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Warungasem</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Kandeman</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Pecalungan</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Kecamatan Banyuputih</a>
                 </div>
               </div>
 
@@ -97,13 +119,15 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="./index.html">test</a>
+                  <a href="./index.html">Tombo Coffee</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">test</a>
+                  <a href="./index.html">Batang Dolphin Center</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">test</a>
+                  <a href="./index.html">Pantai Ujung Negoro</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./index.html">test</a>
+                  <a href="./index.html">Kerajinan Kulit Masin</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="./index.html">Bukit Cinta Ngadirejo</a>
                 </div>
               </div>
             </div>
@@ -302,7 +326,7 @@
       <div class="main-sections">
         <div class="section-header">
           <div class="triangle-link-container ai-c">
-            <p class="section-header-title">Sejarah Batang</p>
+            <p class="section-header-title">Sejarah Kabupaten Batang</p>
           </div>
           <div class="horizontal-line bg-primary-gradient"></div>
         </div>
@@ -333,7 +357,42 @@
       <div class="main-sections">
         <div class="section-header">
           <div class="triangle-link-container ai-c">
-            <a class="section-header-title">Berita <strong>Terbaru</strong></a>
+            <p class="section-header-title">Pemerintah Kabupaten Batang</p>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
+
+        <div class="main-sections-container fd-r">
+          <img
+            src="./assets/images/batang.png"
+            alt="batang"
+            class="main-text-section-img"
+          />
+          <div class="main-text-section-desc"
+            >Kabupaten Batang, yang terletak di pesisir utara Jawa Tengah,
+            memiliki sejarah panjang yang dimulai sejak masa Kerajaan Mataram
+            Islam. Nama "Batang" berasal dari legenda Ki Ageng Bahurekso,
+            seorang tokoh yang berhasil mengangkat batang kayu besar yang
+            menghalangi aliran air di daerah tersebut, sebuah peristiwa yang
+            kemudian menjadi asal-usul nama daerah ini . Pada masa lalu, Batang
+            dikenal sebagai kota pelabuhan penting yang sejajar dengan Pemalang
+            dan Demak, serta telah dikenal sejak zaman Sriwijaya dan Majapahit .
+            Pemerintahan Kabupaten Batang mengalami dua periode, dimulai dari
+            kebangkitan Mataram Islam hingga masa penjajahan Eropa, dengan tokoh
+            penting seperti Kanjeng Adipati Pangeran Mandurorejo yang dianggap
+            sebagai cikal bakal pemerintahan kabupaten ini .
+          </div>
+        </div>
+      </div>
+
+      <div class="main-sections">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <a
+              class="section-header-title"
+              href="./pages/berita-list.html#Terbaru"
+              >Berita <strong>Terbaru</strong></a
+            >
             <img
               src="./assets/icons/triangle-right.svg"
               alt=">"
@@ -352,7 +411,9 @@
       <div class="main-sections">
         <div class="section-header">
           <div class="triangle-link-container ai-c">
-            <a class="section-header-title">Berita <strong>Foto</strong></a>
+            <a class="section-header-title" href="./pages/berita-list.html#Foto"
+              >Berita <strong>Foto</strong></a
+            >
             <img
               src="./assets/icons/triangle-right.svg"
               alt=">"
