--- a/pages/search.html
+++ b/pages/search.html
@@ -74,13 +74,35 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="../index.html">test</a>
+                  <a href="../index.html">Kecamatan Wonotunggal</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">test</a>
+                  <a href="../index.html">Kecamatan Bandar</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">test</a>
+                  <a href="../index.html">Kecamatan Blado</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">test</a>
+                  <a href="../index.html">Kecamatan Reban</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Bawang</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Tersono</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Gringsing</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Limpung</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Subah</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Tulis</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Batang</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Warungasem</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Kandeman</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Pecalungan</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Kecamatan Banyuputih</a>
                 </div>
               </div>
 
@@ -97,13 +119,15 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="../index.html">test</a>
+                  <a href="../index.html">Tombo Coffee</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">test</a>
+                  <a href="../index.html">Batang Dolphin Center</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">test</a>
+                  <a href="../index.html">Pantai Ujung Negoro</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="../index.html">test</a>
+                  <a href="../index.html">Kerajinan Kulit Masin</a>
+                  <div class="horizontal-line thin"></div>
+                  <a href="../index.html">Bukit Cinta Ngadirejo</a>
                 </div>
               </div>
             </div>
