--- a/index.html
+++ b/index.html
@@ -326,7 +326,9 @@
       <div class="main-sections">
         <div class="section-header">
           <div class="triangle-link-container ai-c">
-            <p class="section-header-title">Sejarah Kabupaten Batang</p>
+            <p class="section-header-title"
+              >Sejarah Kabupaten <strong>Batang</strong></p
+            >
           </div>
           <div class="horizontal-line bg-primary-gradient"></div>
         </div>
@@ -354,7 +356,7 @@
         </div>
       </div>
 
-      <div class="main-sections">
+      <!-- <div class="main-sections">
         <div class="section-header">
           <div class="triangle-link-container ai-c">
             <p class="section-header-title">Pemerintah Kabupaten Batang</p>
@@ -383,7 +385,7 @@
             sebagai cikal bakal pemerintahan kabupaten ini .
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="main-sections">
         <div class="section-header">
@@ -428,6 +430,150 @@
           <div class="berita-foto-row" id="berita-foto-row-1"> </div>
 
           <div class="berita-foto-row" id="berita-foto-row-2"> </div>
+        </div>
+      </div>
+
+      <div class="main-sections">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <p class="section-header-title">Telepon <strong>Penting</strong></p>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
+
+        <div class="main-sections-container fd-r ai-s">
+          <div class="main-info-container">
+            <div class="main-info-header"
+              >Layanan Kesehatan dan Darurat Medis</div
+            >
+            <div class="horizontal-line"></div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/firstaid.svg"
+                  alt="firstaid"
+                  class="invert-icons"
+                />
+                PSC 119 Si Slamet
+              </div>
+              <p class="main-info-content-number"> (0285) 119</p>
+            </div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/hospital.svg"
+                  alt="hospital"
+                  class="invert-icons"
+                />
+                RSUD Batang
+              </div>
+              <p class="main-info-content-number">(0285) 4493035</p>
+            </div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/hospital.svg"
+                  alt="hospital"
+                  class="invert-icons"
+                />
+                RSUD Limpung
+              </div>
+              <p class="main-info-content-number">(0285) 4468362</p>
+            </div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/pmi.svg"
+                  alt="pmi"
+                  class="invert-icons"
+                />
+                PMI Batang
+              </div>
+              <p class="main-info-content-number">(0285) 391331</p>
+            </div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/hospital.svg"
+                  alt="hospital"
+                  class="invert-icons"
+                />
+                RS QIM
+              </div>
+              <p class="main-info-content-number">(0285) 4495222</p>
+            </div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/firstaid.svg"
+                  alt="firstaid"
+                  class="invert-icons"
+                />
+                Layanan Panggilan Darurat
+              </div>
+              <p class="main-info-content-number">112</p>
+            </div>
+          </div>
+
+          <div class="main-info-container">
+            <div class="main-info-header">Layanan Keamanan dan Utilitas</div>
+            <div class="horizontal-line"></div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/police.svg"
+                  alt="police"
+                  class="invert-icons"
+                />
+                Polres Batang
+              </div>
+              <p class="main-info-content-number">110</p>
+            </div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/military.svg"
+                  alt="military"
+                  class="invert-icons"
+                />
+                Kodim Batang
+              </div>
+              <p class="main-info-content-number">(0285) 391035</p>
+            </div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/firefighter.svg"
+                  alt="firefighter"
+                  class="invert-icons"
+                />
+                Pemadam Kebakaran
+              </div>
+              <p class="main-info-content-number">(0285) 392004 / 392914</p>
+            </div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/water.svg"
+                  alt="water utility"
+                  class="invert-icons"
+                />
+                PDAM Batang
+              </div>
+              <p class="main-info-content-number">(0285) 391382</p>
+            </div>
+            <div class="info-content-container">
+              <div class="main-info-content-nameimg-container">
+                <img
+                  src="./assets/icons/electricity.svg"
+                  alt="electricity"
+                  class="invert-icons"
+                />
+                PLN Batang
+              </div>
+              <p class="main-info-content-number">(0285) 391032</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
