--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/styles/footer.css" />
     <link rel="stylesheet" href="./assets/styles/accessibility.css" />
     <link rel="stylesheet" href="./assets/styles/index.css" />
+    <link rel="stylesheet" href="./assets/styles/carousel.css" />
   </head>
   <body>
     <div class="navbar">
@@ -410,7 +411,7 @@
         </div>
       </div>
 
-      <div class="main-sections">
+      <!-- <div class="main-sections">
         <div class="section-header">
           <div class="triangle-link-container ai-c">
             <a class="section-header-title" href="./pages/berita-list.html#Foto"
@@ -430,6 +431,59 @@
           <div class="berita-foto-row" id="berita-foto-row-1"> </div>
 
           <div class="berita-foto-row" id="berita-foto-row-2"> </div>
+        </div>
+      </div> -->
+
+      <div class="main-sections">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <p class="section-header-title">Layanan Publik</p>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
+
+        <div class="carousel" mask>
+          <article>
+            <img
+              src="https://images.pexels.com/photos/635699/pexels-photo-635699.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt=""
+            />
+          </article>
+
+          <article>
+            <img
+              src="https://images.pexels.com/photos/7168798/pexels-photo-7168798.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="easter eggs"
+            />
+          </article>
+
+          <article>
+            <img
+              src="https://images.pexels.com/photos/4099179/pexels-photo-4099179.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="hot cross buns"
+            />
+          </article>
+
+          <article>
+            <img
+              src="https://images.pexels.com/photos/5145/animal-easter-chick-chicken.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="easter chick"
+            />
+          </article>
+
+          <article>
+            <img
+              src="https://images.pexels.com/photos/2072158/pexels-photo-2072158.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="easter bunny"
+            />
+          </article>
+
+          <article>
+            <img
+              src="https://images.pexels.com/photos/12787666/pexels-photo-12787666.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="crown of thorms"
+            />
+          </article>
         </div>
       </div>
 
