--- a/index.html
+++ b/index.html
@@ -442,49 +442,18 @@
           <div class="horizontal-line bg-primary-gradient"></div>
         </div>
 
-        <div class="carousel" mask>
-          <article>
-            <img
-              src="https://images.pexels.com/photos/635699/pexels-photo-635699.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt=""
-            />
-          </article>
+        <div class="carousel" id="layananPublikCarousel" mask> </div>
+      </div>
 
-          <article>
-            <img
-              src="https://images.pexels.com/photos/7168798/pexels-photo-7168798.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt="easter eggs"
-            />
-          </article>
-
-          <article>
-            <img
-              src="https://images.pexels.com/photos/4099179/pexels-photo-4099179.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt="hot cross buns"
-            />
-          </article>
-
-          <article>
-            <img
-              src="https://images.pexels.com/photos/5145/animal-easter-chick-chicken.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt="easter chick"
-            />
-          </article>
-
-          <article>
-            <img
-              src="https://images.pexels.com/photos/2072158/pexels-photo-2072158.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt="easter bunny"
-            />
-          </article>
-
-          <article>
-            <img
-              src="https://images.pexels.com/photos/12787666/pexels-photo-12787666.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt="crown of thorms"
-            />
-          </article>
+      <div class="main-sections">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <p class="section-header-title">Lembaga Kabupaten Batang</p>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
         </div>
+
+        <div class="carousel" id="lembagaBatangCarousel" mask> </div>
       </div>
 
       <div class="main-sections">
@@ -760,6 +729,7 @@
     <script src="./components/renderNews.js"></script>
     <script src="./components/renderPhotoNews.js"></script>
     <script src="./components/searchForm.js"></script>
+    <script src="./components/addCarousel.js"></script>
     <script src="./components/index.js"></script>
     <script src="./components/accessibility.js"></script>
   </body>
