minor carousel update

--- a/index.html
+++ b/index.html
@@ -730,6 +730,7 @@
     <script src="./components/renderPhotoNews.js"></script>
     <script src="./components/searchForm.js"></script>
     <script src="./components/addCarousel.js"></script>
+    <script src="./components/carouselDrag.js"></script>
     <script src="./components/index.js"></script>
     <script src="./components/accessibility.js"></script>
   </body>
