--- a/index.html
+++ b/index.html
@@ -434,18 +434,20 @@
         </div>
       </div> -->
 
-      <div class="main-sections">
+      <div class="main-sections pr">
         <div class="section-header">
           <div class="triangle-link-container ai-c">
             <p class="section-header-title">Layanan Publik</p>
           </div>
           <div class="horizontal-line bg-primary-gradient"></div>
         </div>
-
-        <div class="carousel" id="layananPublikCarousel" mask> </div>
+        <div class="carousel-overlay"></div>
+        <div class="carousel-container pr">
+          <div class="carousel" id="layananPublikCarousel"> </div>
+        </div>
       </div>
 
-      <div class="main-sections">
+      <div class="main-sections pr">
         <div class="section-header">
           <div class="triangle-link-container ai-c">
             <p class="section-header-title">Lembaga Kabupaten Batang</p>
@@ -453,7 +455,10 @@
           <div class="horizontal-line bg-primary-gradient"></div>
         </div>
 
-        <div class="carousel" id="lembagaBatangCarousel" mask> </div>
+        <div class="carousel-overlay"></div>
+        <div class="carousel-container pr">
+          <div class="carousel" id="lembagaBatangCarousel"> </div>
+        </div>
       </div>
 
       <div class="main-sections">
