--- a/pages/geografis.html
+++ b/pages/geografis.html
@@ -265,8 +265,12 @@
       <div class="main-text-container">
         <div class="main-text-header">Letak dan Kondisi Geografis</div>
         <div class="main-text-withimg-container">
-          <div class="main-text-img-container">
-            <img src="../assets/images/geografis.jpg" alt="Geografis" />
+          <div class="main-text-img-container w-a">
+            <img
+              src="../assets/images/geografis.jpg"
+              alt="Geografis"
+              class="bigger-img"
+            />
             Jalur Nasional Pantura Jawa, 2016, dok. BAPPEDA Kab. Batang
           </div>
 
