--- a/pages/kecamatan.html
+++ b/pages/kecamatan.html
@@ -262,25 +262,61 @@
     </section>
 
     <section class="main">
-      <div class="main-text-container lower-gap">
+      <div class="main-text-container h-50vh jc-c">
         <div class="main-text-header">Kecamatan Limpung</div>
-        <div class="main-text-desc-container">
-          <div class="main-text-desc">Desa Sukomangli</div>
-          <div class="main-text-desc">Desa Babadan</div>
-          <div class="main-text-desc">Desa Donowangun</div>
-          <div class="main-text-desc">Desa Kutosari</div>
-          <div class="main-text-desc">Desa Ngaliyan</div>
+        <div class="lembaga-items-container">
+          <div class="lembaga-item-container">
+            <img
+              src="../assets/images/sungkomangli.jpeg"
+              alt="lembagaitemimg"
+            />
+            Desa Sukomangli
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/babadan.jpg" alt="lembagaitemimg" />
+            Desa Babadan
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/babadan.jpg" alt="lembagaitemimg" />Desa
+            Donowangun
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/babadan.jpg" alt="lembagaitemimg" />Desa
+            Kutosari
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/babadan.jpg" alt="lembagaitemimg" />Desa
+            Ngaliyan
+          </div>
         </div>
       </div>
 
-      <div class="main-text-container lower-gap">
+      <div class="main-text-container h-50vh jc-c">
         <div class="main-text-header">Kecamatan Gringsing</div>
-        <div class="main-text-desc-container">
-          <div class="main-text-desc">Desa Sidorejo</div>
-          <div class="main-text-desc">Desa Yosorejo</div>
-          <div class="main-text-desc">Desa Krengseng</div>
-          <div class="main-text-desc">Desa Mentosari</div>
-          <div class="main-text-desc">Desa Plelen</div>
+        <div class="lembaga-items-container">
+          <div class="lembaga-item-container">
+            <img
+              src="../assets/images/sungkomangli.jpeg"
+              alt="lembagaitemimg"
+            />
+            Desa Sukomangli
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/babadan.jpg" alt="lembagaitemimg" />
+            Desa Babadan
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/babadan.jpg" alt="lembagaitemimg" />Desa
+            Donowangun
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/babadan.jpg" alt="lembagaitemimg" />Desa
+            Kutosari
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/babadan.jpg" alt="lembagaitemimg" />Desa
+            Ngaliyan
+          </div>
         </div>
       </div>
     </section>
