--- a/pages/dinas.html
+++ b/pages/dinas.html
@@ -262,49 +262,32 @@
     </section>
 
     <section class="main">
-      <div class="main-text-container lower-gap">
+      <div class="main-text-container h-50vh jc-c">
         <div class="main-text-header">Badan</div>
-        <div class="main-text-desc-container">
-          <div class="main-text-desc">Badan Kepegawaian Daerah</div>
-          <div class="main-text-desc">Badan Penanggulangan Bencana Daerah</div>
-          <div class="main-text-desc">Badan Kesatuan Bangsa dan Politik</div>
-          <div class="main-text-desc">Badan Keuangan Daerah</div>
-          <div class="main-text-desc">Badan Perencanaan Pembangunan Daerah</div>
-        </div>
-      </div>
-
-      <div class="main-text-container lower-gap">
-        <div class="main-text-header">Dinas</div>
-        <div class="main-text-desc-container">
-          <div class="main-text-desc">Dinas Pendidikan dan Kebudayaan</div>
-          <div class="main-text-desc">Dinas Kesehatan</div>
-          <div class="main-text-desc"
-            >Dinas Pekerjaan Umum dan Penataan Ruang</div
-          >
-          <div class="main-text-desc">Dinas Sosial</div>
-          <div class="main-text-desc">Dinas Lingkungan Hidup</div>
-        </div>
-      </div>
-
-      <div class="main-text-container lower-gap">
-        <div class="main-text-header">Kantor</div>
-        <div class="main-text-desc-container">
-          <div class="main-text-desc">Kantor Kecamatan Batang</div>
-          <div class="main-text-desc">Kantor Kecamatan Limpung</div>
-          <div class="main-text-desc">Kantor Kecamatan Gringsing</div>
-          <div class="main-text-desc">Kantor Kecamatan Subah</div>
-          <div class="main-text-desc">Kantor Kecamatan Tulis</div>
-        </div>
-      </div>
-
-      <div class="main-text-container lower-gap">
-        <div class="main-text-header">Lembaga Teknis</div>
-        <div class="main-text-desc-container">
-          <div class="main-text-desc">Inspektorat Daerah</div>
-          <div class="main-text-desc">Sekretariat DPRD</div>
-          <div class="main-text-desc">Satuan Polisi Pamong Praja</div>
-          <div class="main-text-desc">Dinas Komunikasi dan Informatika</div>
-          <div class="main-text-desc">Unit Layanan Pengadaan</div>
+        <div class="lembaga-items-container">
+          <div class="lembaga-item-container">
+            <img
+              src="../assets/images/lembagaBatang/bkd.jpg"
+              alt="lembagaitemimg"
+            />
+            Badan Kepegawaian Daerah
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/bpbd.jpg" alt="lembagaitemimg" />
+            Badan Penanggulangan Bencana Daerah
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/bakesbangpol.jpg" alt="lembagaitemimg" />
+            Badan Kesatuan Bangsa dan Politik
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/bkd-keuangan.jpg" alt="lembagaitemimg" />
+            Badan Keuangan Daerah
+          </div>
+          <div class="lembaga-item-container">
+            <img src="../assets/images/bappeda.jpg" alt="lembagaitemimg" />
+            Badan Perencanaan Pembangunan Daerah
+          </div>
         </div>
       </div>
     </section>
