improved scrolltohash, added more downloadables, update json, etc

--- a/pages/download.html
+++ b/pages/download.html
@@ -271,7 +271,7 @@
                 <th>No</th>
                 <th>Nama File</th>
                 <th>Ekstensi</th>
-                <th>Ukuran</th>
+                <th class="slightly-wider">Ukuran</th>
                 <th>Download</th>
               </tr>
             </thead>
@@ -408,8 +408,9 @@
     </div>
 
     <script src="../components/variables.js"></script>
-    <script src="../components/downloadFiles.js"></script>
     <script src="../components/searchForm.js"></script>
+    <script src="../components/downloadFiles.js"></script>
+    <script src="../components/scrollToHash.js"></script>
     <script src="../components/accessibility.js"></script>
   </body>
 </html>
