--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="./assets/styles/footer.css" />
     <link rel="stylesheet" href="./assets/styles/accessibility.css" />
     <link rel="stylesheet" href="./assets/styles/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4/dist/css/splide.min.css"
+    />
+
+    <!-- <link rel="stylesheet" href="./assets/styles/splide.min.css" /> -->
     <link rel="stylesheet" href="./assets/styles/carousel.css" />
   </head>
   <body>
@@ -434,7 +440,7 @@
         </div>
       </div> -->
 
-      <div class="main-sections pr">
+      <!-- <div class="main-sections pr">
         <div class="section-header">
           <div class="triangle-link-container ai-c">
             <p class="section-header-title">Layanan Publik</p>
@@ -457,7 +463,39 @@
 
         <div class="carousel-overlay"></div>
         <div class="carousel-container pr">
-          <div class="carousel" id="lembagaBatangCarousel"> </div>
+          <div class="carousel"> </div>
+        </div>
+      </div> -->
+
+      <div class="main-sections pr">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <p class="section-header-title">Layanan Publik</p>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
+
+        <div class="carousel-overlay"></div>
+        <div class="splide" id="layananPublikCarousel">
+          <div class="splide__track">
+            <ul class="splide__list"> </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="main-sections pr">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <p class="section-header-title">Lembaga Kabupaten Batang</p>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
+
+        <div class="carousel-overlay"></div>
+        <div class="splide" id="lembagaBatangCarousel">
+          <div class="splide__track">
+            <ul class="splide__list"> </ul>
+          </div>
         </div>
       </div>
 
@@ -730,13 +768,15 @@
     </div>
 
     <script src="./components/variables.js"></script>
+    <!-- <script src="./components/splide.min.js"></script>
+    <script src="./components/splide-extension-auto-scroll.min.js"></script> -->
     <script src="./components/navbar.js"></script>
     <script src="./components/renderNews.js"></script>
     <script src="./components/renderPhotoNews.js"></script>
     <script src="./components/searchForm.js"></script>
     <script src="./components/addCarousel.js"></script>
-    <script src="./components/carouselDrag.js"></script>
-    <script src="./components/index.js"></script>
+    <!-- <script src="./components/carouselDrag.js"></script> -->
+    <script type="module" src="./components/index.js"></script>
     <script src="./components/accessibility.js"></script>
   </body>
 </html>
